Fix horizontal scroll

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,7 +32,7 @@
   color: #e4e4e4;
   display: flex;
   justify-content: flex-start;
-  padding-left: 275px;
+  padding-left: 75px;
 }
 .menu-list {
   font-family: Arodora Pro;
